Proper database behavior during tests. (#81)