@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -12,10 +11,10 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.transaction.annotation.Transactional;
 import pl.edu.pw.mini.ingreedio.api.IntegrationTest;
 import pl.edu.pw.mini.ingreedio.api.product.criteria.ProductCriteria;
 import pl.edu.pw.mini.ingreedio.api.product.criteria.ProductsSortingCriteria;
@@ -29,7 +28,6 @@ import pl.edu.pw.mini.ingreedio.api.product.model.Review;
 import pl.edu.pw.mini.ingreedio.api.product.repository.ProductRepository;
 import pl.edu.pw.mini.ingreedio.api.product.service.ProductService;
 
-@SpringBootTest
 public class ProductServiceTest extends IntegrationTest {
 
     @Autowired
@@ -38,12 +36,16 @@ public class ProductServiceTest extends IntegrationTest {
     @Autowired
     private ProductRepository productRepository;
 
+    /**
+     * Please refer to <a href="https://github.com/Java-DZGS/ingreedio-api/pull/81#issuecomment-2115445411">this</a> PR comment.
+     */
     @AfterEach
     void clearProducts() {
         productRepository.deleteAll();
     }
 
     @Nested
+    @Transactional
     class AddAndGetTests {
         @Test
         public void givenProductObject_whenSaveProduct_thenReturnProductObject() {
@@ -90,6 +92,7 @@ public class ProductServiceTest extends IntegrationTest {
     }
 
     @Nested
+    @Transactional
     class FilteringTests {
         @Test
         public void givenNoCriteria_whenMatch_thenReturnAllProducts() {
@@ -165,15 +168,15 @@ public class ProductServiceTest extends IntegrationTest {
         public void givenIngredientsIncludeCriteria_whenFilter_thenReturnCorrectProducts() {
             // Given
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot", "beet")).build());
+                .ingredients(List.of("potato", "carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
                 .ingredients(List.of("beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot")).build());
+                .ingredients(List.of("potato", "carrot")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("carrot", "beet")).build());
+                .ingredients(List.of("carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "beet")).build());
+                .ingredients(List.of("potato", "beet")).build());
 
             var criteria1 = ProductCriteria.builder()
                 .ingredientsNamesToInclude(Set.of("potato", "beet")).build();
@@ -211,15 +214,15 @@ public class ProductServiceTest extends IntegrationTest {
         public void givenIngredientsExcludeCriteria_whenFilter_thenReturnCorrectProducts() {
             // Given
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot", "beet")).build());
+                .ingredients(List.of("potato", "carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
                 .ingredients(List.of("beet", "tomato")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot")).build());
+                .ingredients(List.of("potato", "carrot")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("carrot", "beet")).build());
+                .ingredients(List.of("carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "beet")).build());
+                .ingredients(List.of("potato", "beet")).build());
 
             var criteria1 = ProductCriteria.builder()
                 .ingredientsNamesToExclude(Set.of("potato", "beet")).build();
@@ -262,21 +265,21 @@ public class ProductServiceTest extends IntegrationTest {
         public void givenRatingIngredientsCriteria_whenFilter_thenReturnCorrectProducts() {
             // Given
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot", "beet")).build());
+                .ingredients(List.of("potato", "carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
                 .ingredients(List.of("beet", "tomato")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "carrot")).build());
+                .ingredients(List.of("potato", "carrot")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("carrot", "beet")).build());
+                .ingredients(List.of("carrot", "beet")).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato")).rating(6).build());
+                .ingredients(List.of("potato")).rating(6).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "beet")).rating(7).build());
+                .ingredients(List.of("potato", "beet")).rating(7).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("beet")).rating(10).build());
+                .ingredients(List.of("beet")).rating(10).build());
             productService.addProduct(Product.builder().brand("carfour")
-                .ingredients(Arrays.asList("potato", "beet")).rating(10).build());
+                .ingredients(List.of("potato", "beet")).rating(10).build());
 
             var criteria = ProductCriteria.builder()
                 .ingredientsNamesToInclude(Set.of("potato"))
@@ -309,14 +312,14 @@ public class ProductServiceTest extends IntegrationTest {
                     .name("pasta do zębów")
                     .brand("karfur")
                     .provider("żapka")
-                    .ingredients(Arrays.asList("polietylen", "guma guar", "metanol"))
+                    .ingredients(List.of("polietylen", "guma guar", "metanol"))
                     .build());
             productService.addProduct(
                 Product.builder()
                     .name("poper")
                     .brand("karfur")
                     .provider("żapka")
-                    .ingredients(Arrays.asList("rak", "guma", "metanol"))
+                    .ingredients(List.of("rak", "guma", "metanol"))
                     .build());
 
             // Red herrings
@@ -356,10 +359,10 @@ public class ProductServiceTest extends IntegrationTest {
                     .build());
 
             var criteria = ProductCriteria.builder()
-                    .brandsNamesToInclude(Set.of("karfur"))
-                    .providersNames(Set.of("żapka"))
-                    .ingredientsNamesToInclude(Set.of("metanol"))
-                    .build();
+                .brandsNamesToInclude(Set.of("karfur"))
+                .providersNames(Set.of("żapka"))
+                .ingredientsNamesToInclude(Set.of("metanol"))
+                .build();
 
             // When
             var kerfurZabkaPage = productService.getProductsMatchingCriteria(
@@ -381,6 +384,7 @@ public class ProductServiceTest extends IntegrationTest {
     }
 
     @Nested
+    @Transactional
     class PhraseAndSortingTests {
         @Test
         public void givenProducts_whenMatchSort_thenProductWithGreaterMatchScoreIsFirst() {
@@ -397,7 +401,7 @@ public class ProductServiceTest extends IntegrationTest {
             var criteria = ProductCriteria.builder()
                 .phraseKeywords(Set.of("krem"))
                 .hasMatchScoreSortCriteria(true)
-                .sortingCriteria(Arrays.asList(sortingCriteria))
+                .sortingCriteria(List.of(sortingCriteria))
                 .build();
 
             // When
@@ -430,11 +434,12 @@ public class ProductServiceTest extends IntegrationTest {
 
             // Then
             assertThat(result.products().size()).isEqualTo(1);
-            assertThat(result.products().get(0).name()).isEqualTo("SErEk");
+            assertThat(result.products().getFirst().name()).isEqualTo("SErEk");
         }
     }
 
     @Nested
+    @Transactional
     class ProductsLikingTests {
         @Test
         @WithMockUser(username = "user", password = "user", roles = {})
@@ -450,6 +455,7 @@ public class ProductServiceTest extends IntegrationTest {
 
             // Then
             assertTrue(result);
+            assertTrue(updatedProduct.isPresent());
             assertTrue(updatedProduct.get().isLiked());
         }
 
@@ -480,6 +486,7 @@ public class ProductServiceTest extends IntegrationTest {
 
             // Then
             assertTrue(result);
+            assertTrue(updatedProduct.isPresent());
             assertFalse(updatedProduct.get().isLiked());
         }
 
@@ -531,11 +538,13 @@ public class ProductServiceTest extends IntegrationTest {
             Optional<FullProductDto> result = productService.getProductById(product.getId());
 
             // Then
+            assertTrue(result.isPresent());
             assertThat(result.get().isLiked()).isTrue();
         }
     }
 
     @Nested
+    @Transactional
     class EditAndDeleteTest {
         @Test
         public void givenProductId_whenEditProduct_thenProductIsDeleted() {
@@ -589,8 +598,7 @@ public class ProductServiceTest extends IntegrationTest {
         @Test
         public void givenProductId_whenEditNonExistingProduct_thenReturnFalse() {
             // Given
-            Product editedProduct = productService.addProduct(Product.builder()
-                .name("edited").build());
+            productService.addProduct(Product.builder().name("edited").build());
 
             ProductRequestDto productRequest = ProductRequestDto.builder()
                 .name("edited")
